--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.datasource.url=jdbc:postgresql://localhost:5433/gezidb
 spring.datasource.username=postgres
 spring.datasource.password=12345
 spring.jpa.properties.javax.persistence.validation.mode = none
+
+spring.resources.add-mappings=true
